--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,14 @@
   "require": {
     "php-amqplib/php-amqplib": "^2.6.1",
     "ext-pdo": "*"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-master",
+    "codeception/codeception": "^3.1"
+  },
+  "autoload": {
+    "psr-4": {
+      "": "src/"
+    }
   }
 }
